<resources>
    <string name="app_name">Movie Review</string>
    <string name="title_home">Home</string>
    <string name="title_my_movie">Favorities</string>
    <string name="title_search">Search</string>
    <string name="category_popular">POPULAR</string>
    <string name="view_more">View more</string>
    <string name="category_now_playing">NOW PLAYING</string>
    <string name="category_up_coming">UP COMING</string>
    <string name="category_top_rate">TOP RATE</string>
    <string name="category_genres">GENRES</string>
    <string name="movie_name">Movie Name</string>
    <string name="tab_title_information">Information</string>
    <string name="tab_title_actor">Actor</string>
    <string name="tab_title_trailer">Trailer</string>
    <string name="tab_title_producer">Producer</string>
    <string name="actor_name">Actor</string>
    <string name="trailer_name">Trailer</string>
    <string name="favorities">FAVOVITIES</string>
    <string name="results">results</string>
    <string name="search_hint">keyword...</string>
    <string name="default_search_result">0</string>
    <string name="search_by">SEARCH BY</string>
    <string name="radio_keyword">Keyword</string>
    <string name="radio_movie">Movie</string>
    <string name="radio_category">Category</string>
    <string name="radio_genre">Genre</string>
    <string name="search_option">Search Options</string>
</resources>
