<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background"
    android:paddingLeft="@dimen/dp_16"
    android:paddingTop="@dimen/dp_8"
    android:paddingRight="@dimen/dp_16"
    android:paddingBottom="@dimen/dp_8">

    <TextView
        android:id="@+id/text_search_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:text="@string/search_by"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radio_group_search_by"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="right"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_search_by">

        <RadioButton
            android:id="@+id/radio_button_keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:buttonTint="@color/color_orange"
            android:checked="true"
            android:gravity="left|center_vertical"
            android:layoutDirection="rtl"
            android:text="@string/radio_keyword"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/radio_button_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:buttonTint="@color/color_orange"
            android:gravity="left|center_vertical"
            android:layoutDirection="rtl"
            android:text="@string/radio_movie"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/radio_button_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:buttonTint="@color/color_orange"
            android:gravity="left|center_vertical"
            android:layoutDirection="rtl"
            android:text="@string/radio_category"
            android:textColor="@android:color/white" />

        <RadioButton
            android:id="@+id/radio_button_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:buttonTint="@color/color_orange"
            android:gravity="left|center_vertical"
            android:layoutDirection="rtl"
            android:text="@string/radio_genre"
            android:textColor="@android:color/white" />
    </RadioGroup>
</android.support.constraint.ConstraintLayout>

